--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+.idea/
 *.py[cod]
 *$py.class
+IReadiTunes/__pycache__/
 
 # C extensions
 *.so
